# Warbot

./: CMakeLists.txt  CMakeSettings.json  README.md  build.bat  build.sh
include/: Controller.hpp  Participant.hpp  Team.hpp
source/: CMakeLists.txt
source/include/: Controller.hpp  Team.hpp
source/src/: Participant.cpp  main.cpp
src/: Controller.cpp  Participant.cpp  Team.cpp  main.cpp
